--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -1,20 +1,23 @@
 Menu="UNRAID-OS"
 Title="Config File Editor"
+Icon="/images/ca.cfg.editor.png"
 ---
 <?
+require_once("/usr/local/emhttp/plugins/ca.cfg.editor/include/caCredits.php");
 $installedVersion = exec("/usr/local/emhttp/plugins/dynamix.plugin.manager/scripts/plugin version /var/log/plugins/ca.cfg.editor.plg");
 if ( is_file("/tmp/plugins/community.applications.plg") ) {
   $upgradeVersion = exec("/usr/local/emhttp/plugins/dynamix.plugin.manager/scripts/plugin version /tmp/plugins/ca.cfg.editor.plg");
 } else {
   $upgradeVersion = "0";
 }
+$vars = parse_ini_file("/var/local/emhttp/var.ini");
+$toolTipsterAllowed = version_compare($vars['version'],"6.3.3",">=") ? "true" : "false";
 
 function addCfg($filename) {
   return "<option value='$filename'>$filename</option>";
 }
 
 $o = "<option value='' selected'>Select File</option>";
-
 $dirContents = array_diff(scandir("/boot/config/"),array(".",".."));
 foreach ($dirContents as $cfg ) {
   if ( is_dir("/boot/config/$cfg") ) {
@@ -42,7 +45,6 @@ foreach ($dirContents as $cfg) {
     $o .= addCfg("/boot/syslinux/$cfg");
   }
 }
-
 ?>
 <script src="/webGui/javascript/jquery.filetree.js"></script>
 <script>
@@ -54,6 +56,16 @@ $(function() {
     $('#upgradeAvailable').show();
   }
   $('#source').fileTreeAttach();
+  
+  if ( "<?=$toolTipsterAllowed?>" == "true" ) {
+    $(".tipsterallowed").show();
+    $('#credits').tooltipster({trigger: 'custom',triggerOpen: {mouseenter:true},triggerClose:{click:true,scroll:true,mouseleave:true},contentAsHTML: true,maxWidth:550,minWidth:550,animation: 'grow',triggerClose:{click:false,scroll:true,mouseleave:true},interactive: true,viewportAware: true,functionBefore: function(instance,helper) {
+        var origin = $(helper.origin);
+        var myID = origin.attr('id');
+        instance.content("<div style='overflow:scroll; max-height:350px; height:550px; overflow-x:hidden; overflow-y:auto;'><center><img src='/plugins/ca.cfg.editor/images/ca.cfg.editor.png' width=96px><br><font size='6' color='white'>CA Config Editor</font><br><br><?=$caCredits?></div>");
+      }
+    });  
+  }
 });
 
 function editfile() {
@@ -72,24 +84,29 @@ function editfilemanual() {
   $.post(URL,{action:'edit',filename:filename},function(data) {
     if (data) {
       $("#editarea").val(data);
+      $("#editarea").attr("data-orig",data);
       $(".edits").prop("disabled",false);
+      $(".editButton").prop("disabled",true);
     }
   });
   $("#backup").html("No Backup File Found");
   $.post(URL,{action:'getBackup',filename:filename},function(data) {
     if (data) {
       $("#backup").html(data);
+      $("#backup").val(data);
     }
   });    
 }
 
 function cancelEdit() {
   $(".edits").prop("disabled",true);
+  var orig = $("#editarea").attr("data-orig");
+  $("#editarea").val(orig);
   $("#file").val("");
 }
 
 function saveEdits() {
-  var filename = $("#file").val();
+  var filename = $("#editing").html();
   if ( ! filename ) {
     return;
   }
@@ -100,7 +117,6 @@ function saveEdits() {
     }
   });
 }
-
 </script>
 
 <style>
@@ -109,18 +125,19 @@ function saveEdits() {
 .fileTree{width:305px;max-height:150px;overflow:scroll;position:absolute;z-index:100;display:none;}
 </style>
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
+
 <span id='debugging'></span>
 <div><span id='upgradeAvailable' style='display:none'><center><font color='red'>An upgrade to this plugin is available</font></center></span></div>
-
 Select a file to edit:
 <select id='file' onchange='editfile();'><?=$o?></select> or <input type='text' id="source" name="shareFolder" value="/" data-pickroot="/"><font size='5' color='blue'><i style='vertical-align:middle;cursor:pointer;' onclick='editfilemanual();' class="fa fa-pencil-square-o" aria-hidden="true"></i></font>  (note: editing a binary file could have unintended consequences)
 <div class='txtdiv'>
 <center>Editing: <span id='editing'>No file selected</span></center>
-<textarea class='edits txtarea' id='editarea'></textarea>
+<textarea class='edits txtarea' id='editarea' oninput='$(".editButton").prop("disabled",false);'></textarea>
 </div>
 <div class='txtdiv'>
 <center>Backup File:</center>
 <textarea class='txtarea' id='backup'disabled></textarea>
 </div>
-<input class='edits' type='button' value='Cancel' onclick='cancelEdit();'><input class='edits' type='button' value='Save' onclick='saveEdits();'>
-</div>
+<input class='edits editButton' type='button' value='Cancel' onclick='cancelEdit();'><input class='edits editButton' type='button' value='Save' onclick='saveEdits();'>
+<div>
+<a id='credits' style='float:right'>Credits</a></div>
