--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -47,6 +47,7 @@ $(function() {
   $('#source').fileTreeAttach();
   
   if ( "<?=$toolTipsterAllowed?>" == "true" ) {
+    $('.ca_tooltip').tooltipster({delay:[1000,1],timer:15000, animation:'grow', arrow:true, trigger:'custom', triggerOpen:{mouseenter: true}, triggerClose:{click:true,scroll:true,mouseleave:true}});
     $(".tipsterallowed").show();
     $('#credits').tooltipster({trigger: 'custom',triggerOpen: {mouseenter:true},triggerClose:{click:true,scroll:true,mouseleave:true},contentAsHTML: true,maxWidth:550,minWidth:550,animation: 'grow',triggerClose:{click:false,scroll:true,mouseleave:true},interactive: true,viewportAware: true,functionBefore: function(instance,helper) {
         var origin = $(helper.origin);
@@ -69,13 +70,31 @@ function editfilemanual() {
     $(".edits").prop("disabled",true);
     return;
   }
+  $(".choosers").prop("disabled",true);
   $("#editing").html(filename);
+  $("#spinner").show();
   $.post(URL,{action:'edit',filename:filename},function(data) {
     if (data) {
-      $("#editarea").val(data);
-      $("#editarea").attr("data-orig",data);
-      $(".edits").prop("disabled",false);
-      $(".editButton").prop("disabled",true);
+      $("#spinner").hide();
+      var filedata = JSON.parse(data);
+      if ( filedata.format == "dos" ) {
+        $("#formatDiv").addClass("dosFormat");
+      } else {
+        $("#formatDiv").removeClass("dosFormat");
+      }
+      setFormatButton();
+      if ( filedata.error == "true" ) {    
+        $("#formatLine").hide();
+        $(".edits,.editButton,#editarea").prop("disabled",true);
+        $("#editarea").val("Error reading file");
+        $("#donebutton,.choosers").prop("disabled",false);
+      } else { 
+        $("#formatLine").show();
+        $("#editarea").val(filedata.contents);
+        $("#editarea").attr("data-orig",filedata.contents);
+        $(".edits,#cancelbutton").prop("disabled",false);
+        $(".editButton,#donebutton").prop("disabled",true);
+      }
     }
   });
   $("#backup").html("No Backup File Found");
@@ -88,23 +107,44 @@ function editfilemanual() {
 }
 
 function cancelEdit() {
-  $(".edits").prop("disabled",true);
   var orig = $("#editarea").attr("data-orig");
   $("#editarea").val(orig);
   $("#file").val("");
+  $("#formatLine").hide();
+  $(".choosers,#donebutton").prop("disabled",false);
+  $("#cancelbutton,.edits").prop("disabled",true);
 }
 
 function saveEdits() {
-  var filename = $("#editing").html();
-  if ( ! filename ) {
-    return;
-  }
-  var contents = $("#editarea").val();
-  $.post(URL,{action:'save',filename:filename,contents:contents},function(data) {
+  var filedata = new Object;
+  filedata.filename = $("#editing").html();
+  filedata.contents = $("#editarea").val();
+  filedata.format = $("#formatDiv").hasClass("dosFormat");
+  $("#spinner").show();
+  $.post(URL,{action:'save',filedata:filedata},function(data) {
     if (data) {
-      $(".edits").prop("disabled",true);
+      $("#file").val("");
+      $("#formatLine,#spinner").hide();
+      $(".choosers,#donebutton").prop("disabled",false);
+      $("#cancelbutton,.edits").prop("disabled",true);
     }
   });
+}
+
+function toggleFormat() {
+  $(".ca-switch-button-button").toggleClass("dosFormat");
+  setFormatButton();
+}
+
+function setFormatButton() {
+  if ( $(".ca-switch-button-button").hasClass("dosFormat") ) {
+    $(".ca-switch-button-button").css("left","12px");
+    $("#format").html("DOS (crlf)");
+  } else {
+    $(".ca-switch-button-button").css("left","0px");
+    $("#format").html("Linux (cr)");
+  }
+  $(".editButton").prop("disabled",false);
 }
 </script>
 
@@ -114,19 +154,23 @@ function saveEdits() {
 .fileTree{width:305px;max-height:150px;overflow:scroll;position:absolute;z-index:100;display:none;}
 </style>
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
+<link type="text/css" rel="stylesheet" href="/plugins/ca.cfg.editor/styles/switchbutton.css">
 
 <span id='debugging'></span>
 <div><span id='upgradeAvailable' style='display:none'><center><font color='red'>An upgrade to this plugin is available</font></center></span></div>
 Select a file to edit:
-<select id='file' onchange='editfile();'><?=$o?></select> or <input type='text' id="source" name="shareFolder" value="/" data-pickroot="/"><font size='5' color='blue'><i style='vertical-align:middle;cursor:pointer;' onclick='editfilemanual();' class="fa fa-pencil-square-o" aria-hidden="true"></i></font>  (note: editing a binary file could have unintended consequences)
+<select class='choosers' id='file' onchange='editfile();'><?=$o?></select> or <input class='choosers' type='text' id="source" name="shareFolder" value="/" data-pickroot="/"><font size='5' color='blue'><i style='vertical-align:middle;cursor:pointer;' onclick='editfilemanual();' class="fa fa-pencil-square-o" aria-hidden="true"></i></font>  (note: editing a binary file could have unintended consequences)<span id='spinner' style='display:none;'><img width='25px' src='/plugins/ca.cfg.editor/images/spinner2.gif'></span>
 <div class='txtdiv'>
 <center>Editing: <span id='editing'>No file selected</span></center>
 <textarea class='edits txtarea' id='editarea' oninput='$(".editButton").prop("disabled",false);'></textarea>
 </div>
 <div class='txtdiv'>
 <center>Backup File:</center>
-<textarea class='txtarea' id='backup'disabled></textarea>
+<textarea class='txtarea' id='backup' disabled></textarea>
 </div>
-<input class='edits editButton' type='button' value='Cancel' onclick='cancelEdit();'><input class='edits editButton' type='button' value='Save' onclick='saveEdits();'>
 <div>
-<a id='credits' style='float:right'>Credits</a></div>
+<div id='formatLine' style='display:none;'><div class='ca_tooltip ca-switch-button-background' style='width:25px; height:11px;' onclick='toggleFormat();' title='Generally, it is not recommended to change the format'><div id='formatDiv' class='ca-switch-button-button' style='width:12px; height:11px; left:11px;'></div></div>
+File Format: <font color='purple'><span id='format'></span></font></div></div>
+<input type='button' id='cancelbutton' value='Cancel' onclick='cancelEdit();' disabled><input class='edits editButton' type='button' value='Save' onclick='saveEdits();'><input id='donebutton' type='button' value='Done' onclick='done();'>
+<div><a id='credits' style='float:right'>Credits</a></div>
+<span id='debugging'></span>
