--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -151,10 +151,10 @@ function setFormatButton() {
 <style>
 .txtdiv {display:inline-block;}
 .txtarea {resize:both;border:1px solid red;width:600px;height:300px;font-family:monospace;}
-.fileTree{width:305px;max-height:150px;overflow:scroll;position:absolute;z-index:100;display:none;}
+.fileTree{width:305px;max-height:150px;overflow:scroll;position:absolute;z-index:100;display:none;color:initial;}
 </style>
-<link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
-<link type="text/css" rel="stylesheet" href="/plugins/ca.cfg.editor/styles/switchbutton.css">
+<link type="text/css" rel="stylesheet" href="<?=autov('/webGui/styles/jquery.filetree.css')?>">
+<link type="text/css" rel="stylesheet" href="<?=autov('/plugins/ca.cfg.editor/styles/switchbutton.css')?>">
 
 <span id='debugging'></span>
 <div><span id='upgradeAvailable' style='display:none'><center><font color='red'>An upgrade to this plugin is available</font></center></span></div>
