--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -35,7 +35,7 @@ function pluginScan($filename) {
 $o = "<option value='' selected'>Select File</option>";
 pluginScan("/boot");
 ?>
-<script src="/webGui/javascript/jquery.filetree.js"></script>
+<script src="<?=autov("/webGui/javascript/jquery.filetree.js")?>"></script>
 <script>
 var URL = '/plugins/ca.cfg.editor/include/exec.php';
 
