Icon not showing in Grey / Azure themes

--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -1,6 +1,6 @@
 Menu="UNRAID-OS"
 Title="Config File Editor"
-Icon="/images/ca.cfg.editor.png"
+Icon="cogs"
 ---
 <?
 require_once("/usr/local/emhttp/plugins/ca.cfg.editor/include/caCredits.php");
