add support for stop file

--- a/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
+++ b/source/ca.cfg.editor/usr/local/emhttp/plugins/ca.cfg.editor/ConfigEdit.page
@@ -21,7 +21,7 @@ function pluginScan($filename) {
       pluginScan("$filename/$cfg");
       continue;
     }
-    if ( (pathinfo($cfg,PATHINFO_EXTENSION) == "cfg" ) || (pathinfo($cfg,PATHINFO_EXTENSION) == "conf") || (pathinfo($cfg,PATHINFO_EXTENSION) == "ini") || ($cfg == "go") ) {
+    if ( (pathinfo($cfg,PATHINFO_EXTENSION) == "cfg" ) || (pathinfo($cfg,PATHINFO_EXTENSION) == "conf") || (pathinfo($cfg,PATHINFO_EXTENSION) == "ini") || ($cfg == "go") || ($cfg == "stop") ) {
       $o .= addCfg("$filename/$cfg");
     }
   }
